Add food system availabilty switch
